# tf_static_publisher

./: CMakeLists.txt
src/: tf_static_publisher.cpp
